--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,6 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
 }
 
 .links {
@@ -82,4 +81,8 @@ html {
           background-position: 500%;
       }
   }
+
+.img-thumbnail:hover {
+    opacity: 0.4;
+}
 
